# laptop-scraper

./: .cspell.json  .gitignore  .markdownlint.json  README.md  checks.sh  pyproject.toml  readme_desafio.md
.github/workflows/: main.yaml
laptop_scraper/: __main__.py  constants.py  entities.py  scraper.py
tests/: conftest.py
tests/e2e/: main_test.py
tests/integration/: scrape_page_test.py
tests/mocks/e2e/: lenovo_ordered_by_price.json
tests/mocks/integration/: full_page.html  full_page_content.json
tests/mocks/unit/: product_1_div.html  product_2_div.html
tests/unit/scraper/: product_brand_test.py  product_name_test.py
